--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -3,8 +3,8 @@
     <string name="title_activity_settings">Settings</string>
 
     <string name="grayscale">1. Grayscale</string>
-    <string name="crop">2. Crop</string>
-    <string name="eyeAlignment">3. Eye Alignment</string>
+    <string name="crop">Crop</string>
+    <string name="eyeAlignment">2. Eye Alignment</string>
     <string name="gammaCorrection">1. Gamma Correction</string>
     <string name="doG">1. Difference of Gaussian</string>
     <string name="masking">2. Masking</string>
